package com.mikaservices.platform.common.enums

enum class NiveauDanger {
    FAIBLE,
    MOYEN,
    ELEVE,
    TRES_ELEVE
}
