package com.mikaservices.platform.common.enums

enum class RoleDansEquipe {
    CHEF_EQUIPE,
    CHEF_EQUIPE_ADJOINT,
    OUVRIER_QUALIFIE,
    OUVRIER_SPECIALISE,
    MANOEUVRE,
    APPRENTI
}
