package com.mikaservices.platform.common.enums

enum class StatutAffectation {
    PLANIFIEE,
    EN_COURS,
    TERMINEE,
    ANNULEE,
    SUSPENDUE
}
