package com.mikaservices.platform.common.enums

enum class StatutInstallation {
    PLANIFIEE,
    EN_COURS_INSTALLATION,
    INSTALLEE,
    EN_SERVICE,
    EN_DEMONTAGE,
    RETIREE
}
