package com.mikaservices.platform.common.enums

enum class TypeEquipe {
    TERRASSEMENT,
    VOIRIE,
    ASSAINISSEMENT,
    GENIE_CIVIL,
    BATIMENT,
    PONT,
    TOPOGRAPHIE,
    LABORATOIRE,
    MECANIQUE,
    POLYVALENTE
}
