package com.mikaservices.platform.common.enums

enum class TypeInstallation {
    BUREAU_CHANTIER,
    CONTENEUR,
    BARAQUE,
    BASE_VIE,
    CLOTURE,
    SIGNALISATION,
    AIRE_STOCKAGE,
    CENTRALE_BETON,
    ATELIER_MECANIQUE,
    AIRE_PREFABRICATION,
    SANITAIRES,
    GROUPE_ELECTROGENE
}
