package com.mikaservices.platform.common.enums

enum class TypeZone {
    ZONE_TRAVAUX,
    ZONE_STOCKAGE,
    ZONE_PREFABRICATION,
    ZONE_BUREAUX,
    ZONE_BASE_VIE,
    ZONE_DANGEREUSE,
    ZONE_INTERDIT
}
